--- a/app/src/main/res/layout/fragment_media_info.xml
+++ b/app/src/main/res/layout/fragment_media_info.xml
@@ -33,16 +33,16 @@
             android:visibility="gone"
             tools:visibility="visible">
 
-            <LinearLayout
+            <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:paddingStart="48dp"
+                android:paddingStart="32dp"
                 android:paddingTop="32dp"
-                android:paddingEnd="48dp"
+                android:paddingEnd="32dp"
                 android:paddingBottom="16dp">
 
-                <LinearLayout
+                <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="24dp"
                     android:orientation="horizontal">
@@ -63,9 +63,16 @@
                         android:textAlignment="textEnd"
                         android:textColor="?attr/colorPrimary" />
 
-                </LinearLayout>
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_bold"
+                        android:text="@string/score_suffix" />
 
-                <LinearLayout
+                </TableRow>
+
+                <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="24dp"
                     android:orientation="horizontal">
@@ -84,9 +91,9 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/poppins_bold"
                         android:textAlignment="textEnd" />
-                </LinearLayout>
+                </TableRow>
 
-                <LinearLayout
+                <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="24dp"
                     android:orientation="horizontal">
@@ -106,9 +113,9 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/poppins_bold"
                         android:textAlignment="textEnd" />
-                </LinearLayout>
+                </TableRow>
 
-                <LinearLayout
+                <TableRow
                     android:id="@+id/mediaInfoDurationContainer"
                     android:layout_width="match_parent"
                     android:layout_height="24dp"
@@ -136,9 +143,9 @@
                         android:fontFamily="@font/poppins_bold"
                         android:text="@string/min"
                         android:textAlignment="textEnd" />
-                </LinearLayout>
+                </TableRow>
 
-                <LinearLayout
+                <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="24dp"
                     android:orientation="horizontal">
@@ -157,9 +164,9 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/poppins_bold"
                         android:textAlignment="textEnd" />
-                </LinearLayout>
+                </TableRow>
 
-                <LinearLayout
+                <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="24dp"
                     android:orientation="horizontal">
@@ -178,9 +185,9 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/poppins_bold"
                         android:textAlignment="textEnd" />
-                </LinearLayout>
+                </TableRow>
 
-                <LinearLayout
+                <TableRow
                     android:id="@+id/mediaInfoStudioContainer"
                     android:layout_width="match_parent"
                     android:layout_height="24dp"
@@ -202,9 +209,9 @@
                         android:fontFamily="@font/poppins_bold"
                         android:textAlignment="textEnd"
                         android:textColor="?attr/colorPrimary" />
-                </LinearLayout>
+                </TableRow>
 
-                <LinearLayout
+                <TableRow
                     android:id="@+id/mediaInfoSeasonContainer"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -217,7 +224,6 @@
                         android:alpha="0.58"
                         android:text="@string/season"
                         android:textStyle="bold" />
-
                     <TextView
                         android:id="@+id/mediaInfoSeason"
                         android:layout_width="0dp"
@@ -225,9 +231,9 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/poppins_bold"
                         android:textAlignment="textEnd" />
-                </LinearLayout>
+                </TableRow>
 
-                <LinearLayout
+                <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="24dp"
                     android:orientation="horizontal">
@@ -246,9 +252,9 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/poppins_bold"
                         android:textAlignment="textEnd" />
-                </LinearLayout>
+                </TableRow>
 
-                <LinearLayout
+                <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="24dp"
                     android:orientation="horizontal">
@@ -259,7 +265,7 @@
                         android:alpha="0.58"
                         android:text="@string/end_date"
                         android:textStyle="bold" />
-
+                    
                     <TextView
                         android:id="@+id/mediaInfoEnd"
                         android:layout_width="0dp"
@@ -267,8 +273,8 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/poppins_bold"
                         android:textAlignment="textEnd" />
-                </LinearLayout>
-            </LinearLayout>
+                </TableRow>
+            </TableLayout>
 
             <TextView
                 android:layout_width="match_parent"
@@ -283,8 +289,8 @@
                 android:id="@+id/mediaInfoDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:ellipsize="end"
                 android:maxLines="5"
                 android:padding="16dp"
@@ -306,8 +312,8 @@
                 android:layout_height="wrap_content"
                 android:clipToPadding="false"
                 android:nestedScrollingEnabled="true"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
+                android:paddingStart="24dp"
+                android:paddingEnd="24dp"
                 tools:itemCount="4"
                 tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 tools:listitem="@layout/item_genre"
