--- a/app/src/main/res/layout/bottom_sheet_media_list.xml
+++ b/app/src/main/res/layout/bottom_sheet_media_list.xml
@@ -51,6 +51,7 @@
                 android:insetBottom="0dp"
                 android:padding="8dp"
                 android:text="@string/save"
+                android:textColor="@color/pink_500"
                 android:textSize="16sp"
                 app:cornerRadius="16dp" />
         </LinearLayout>
